--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -71,8 +71,14 @@
   --bs-body-font-size: 1rem;
   --bs-body-font-weight: 400;
   --bs-body-line-height: 1.5;
+
   --bs-body-color: #212529;
+  --bs-body-color2: #ffffff;
+
   --bs-body-bg: #fff;
+  --bs-body-bg2:#1a1a1a;
+
+
   --bs-border-width: 1px;
   --bs-border-style: solid;
   --bs-border-color: #dee2e6;
@@ -87,6 +93,9 @@
   --bs-link-hover-color: #0a58ca;
   --bs-code-color: #d63384;
   --bs-highlight-bg: #fff3cd;
+
+  --background-dark: #1a1a1a; /* Color de fondo oscuro */
+  --text-dark: #ffffff; /* Color de texto para el tema oscuro */
 }
 
 *,
@@ -102,17 +111,38 @@
 }
 
 body {
-  margin: 0;
-  font-family: var(--bs-body-font-family);
-  font-size: var(--bs-body-font-size);
-  font-weight: var(--bs-body-font-weight);
-  line-height: var(--bs-body-line-height);
-  color: var(--bs-body-color);
-  text-align: var(--bs-body-text-align);
-  background-color: var(--bs-body-bg);
-  -webkit-text-size-adjust: 100%;
-  -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
+    margin: 0;
+    font-family: var(--bs-body-font-family);
+    font-size: var(--bs-body-font-size);
+    font-weight: var(--bs-body-font-weight);
+    line-height: var(--bs-body-line-height);
+    color: var(--bs-body-color);
+    text-align: var(--bs-body-text-align);
+    background-color: var(--bs-body-bg);
+    -webkit-text-size-adjust: 100%;
+    -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
+    /* Otros estilos comunes para ambos temas */
 }
+
+/* Estilos para el tema claro */
+body[data-bs-theme="light"] {
+    background-color: #ffffff;
+    color: #000000;
+    --bs-light-rgb: #ffffff;
+    --bs-table-color: #000000;
+    /* Otros estilos para el tema claro */
+}
+
+/* Estilos para el tema oscuro */
+body[data-bs-theme="dark"] {
+    background-color: #333333;
+    color: #ffffff;
+    --bs-light-rgb: #333333;
+    --bs-table-color: #ffffff;
+    /* Otros estilos para el tema oscuro */
+}
+
+
 
 hr {
   margin: 1rem 0;
@@ -10833,3 +10863,4 @@ textarea.form-control-lg {
     display: none !important;
   }
 }
+
